[package]
name = "raw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wg2"
path = "src/wg2.rs"

[[bin]]
name = "wg3"
path = "src/wg3.rs"

[[bin]]
name = "sc"
path = "src/sc.rs"

[[bin]]
name = "inst"
path = "src/inst.rs"

[[bin]]
name = "inst2"
path = "src/inst2.rs"

[[bin]]
name = "fm"
path = "src/fm.rs"

[[bin]]
name = "am"
path = "src/am.rs"

[dependencies]
png = "0.17.13"
riff-wave = "0.1.3"
cpal = "0.15.2"
ringbuf = "0.2"
glow = "0.13.1"
glutin = "0.28.0"
glutin-winit = "0.4.2"
raw-window-handle = "0.6.0"
winit = "0.29.11"